// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default divider correctly 1`] = `
<div
  className="src-components-divider-index__basic src-components-divider-index__divider"
  role="presentation"
/>
`;

exports[`should render a hidden divider correctly 1`] = `
<div
  className="src-components-divider-index__hidden src-components-divider-index__divider"
  role="presentation"
/>
`;

exports[`should render a threedee divider correctly 1`] = `
<div
  className="src-components-divider-index__threedee src-components-divider-index__divider"
  role="presentation"
/>
`;
